--- a/ch06_1/bin/.gitignore
+++ b/ch06_1/bin/.gitignore
@@ -1,3 +1,8 @@
-/shelf/
+/abstractex/
 /annonymous/
+/exception/
+/gamelevel/
 /innerinterface/
+/interface_inherit/
+/interface_polymorphism/
+/interfaceex/
